--- a/index.html
+++ b/index.html
@@ -6,43 +6,53 @@
   <title>AutoUpgrade — Решения для авто</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
+    html, body { margin: 0; padding: 0; }
     body {
-      margin: 0;
       font-family: 'Inter', sans-serif;
       background: var(--bg);
       color: var(--text);
       transition: all 0.3s ease-in-out;
+      background: linear-gradient(135deg, var(--bg1), var(--bg2));
+      background-size: 400% 400%;
+      animation: backgroundShift 20s ease infinite;
     }
     :root {
       --bg: #f8f9fb;
       --text: #1a1a1a;
       --card-bg: #ffffff;
+      --bg1: #f8f9fb;
+      --bg2: #cbd2dc;
     }
     body.dark {
       --bg: #1a1a1a;
       --text: #f8f9fb;
       --card-bg: #2c2c2c;
+      --bg1: #1a1a1a;
+      --bg2: #333;
+    }
+    @keyframes backgroundShift {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
     }
     .theme-toggle {
       position: fixed;
       top: 20px;
       right: 20px;
-      background: none;
+      z-index: 9999;
+      background: var(--card-bg);
       border: 2px solid var(--text);
       border-radius: 20px;
       padding: 8px 16px;
       font-weight: 600;
       cursor: pointer;
-      transition: background 0.3s ease;
+      transition: background 0.3s ease, color 0.3s ease;
     }
     .theme-toggle:hover {
       background: var(--text);
       color: var(--bg);
     }
-
     #hero {
       height: 100vh;
       display: flex;
@@ -50,24 +60,23 @@
       justify-content: center;
       text-align: center;
       padding: 0 20px;
-      background: linear-gradient(135deg, #e8ebf1, #cbd2dc);
-      color: #1a1a1a;
       animation: fadeIn 1.2s ease-out forwards;
     }
     #hero h1 {
-      font-size: 40px;
+      font-size: 56px;
       font-weight: 700;
       margin-bottom: 20px;
     }
     #hero p {
-      font-size: 18px;
-      color: #444;
+      font-size: 22px;
+      max-width: 600px;
+      margin: 0 auto;
     }
     .btn {
       display: inline-block;
-      margin-top: 20px;
-      padding: 14px 32px;
-      font-size: 16px;
+      margin-top: 30px;
+      padding: 16px 36px;
+      font-size: 18px;
       font-weight: 600;
       background: #111;
       color: #fff;
@@ -77,18 +86,17 @@
     }
     .btn:hover {
       background: #333;
-      transform: translateY(-2px);
+      transform: scale(1.05);
     }
-
     section {
       max-width: 1000px;
-      margin: 40px auto;
+      margin: 60px auto;
       padding: 0 20px;
     }
     h2 {
-      font-size: 28px;
+      font-size: 32px;
       text-align: center;
-      margin-bottom: 24px;
+      margin-bottom: 30px;
     }
     .card {
       background: var(--card-bg);
@@ -96,6 +104,7 @@
       padding: 20px;
       margin-bottom: 24px;
       box-shadow: 0 12px 24px rgba(0,0,0,0.04);
+      animation: fadeIn 1s ease-in-out;
     }
     .brand {
       display: flex;
@@ -107,6 +116,10 @@
       background: #f0f1f5;
       padding: 12px 16px;
       border-radius: 16px;
+      transition: transform 0.3s ease;
+    }
+    .brand:hover {
+      transform: scale(1.02);
     }
     .brand img {
       width: 28px;
@@ -114,6 +127,14 @@
     }
     .models {
       margin-top: 12px;
+      max-height: 0;
+      overflow: hidden;
+      opacity: 0;
+      transition: max-height 0.6s ease, opacity 0.6s ease;
+    }
+    .models.show {
+      max-height: 1000px;
+      opacity: 1;
     }
     .model {
       margin-bottom: 16px;
@@ -134,17 +155,6 @@
       border-radius: 10px;
       scroll-snap-align: start;
     }
-
-    /* Отзывы */
-    .testimonial {
-      background: #e3e8f0;
-      padding: 20px;
-      border-radius: 16px;
-      font-style: italic;
-      margin-bottom: 16px;
-    }
-
-    /* Форма */
     form {
       display: flex;
       flex-direction: column;
@@ -164,14 +174,12 @@
       font-weight: 600;
       cursor: pointer;
     }
-
     footer {
       text-align: center;
       padding: 20px;
       font-size: 14px;
       color: #888;
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -192,7 +200,6 @@
 
 <section id="brands">
   <h2>Марки и модели</h2>
-
   <div class="card">
     <div class="brand" onclick="toggleModels('haval')">
       <span>Haval</span>
@@ -200,8 +207,8 @@
     </div>
     <div id="haval" class="models">
       <div class="model">
-        <strong>Jolion</strong> — от 3000₽
-        <div>Устанавливается: Android Auto, CarPlay, навигация</div>
+        <strong>Jolion</strong> — от 3000₽<br>
+        Устанавливается: Android Auto, CarPlay, навигация
         <div class="carousel">
           <img src="https://via.placeholder.com/200x120?text=Jolion1">
           <img src="https://via.placeholder.com/200x120?text=Jolion2">
@@ -209,7 +216,6 @@
       </div>
     </div>
   </div>
-
   <div class="card">
     <div class="brand" onclick="toggleModels('chery')">
       <span>Chery</span>
@@ -217,8 +223,8 @@
     </div>
     <div id="chery" class="models">
       <div class="model">
-        <strong>Tiggo 7 Pro</strong> — от 2900₽
-        <div>Устанавливается: камеры 360, голосовое управление</div>
+        <strong>Tiggo 7 Pro</strong> — от 2900₽<br>
+        Устанавливается: камеры 360, голосовое управление
         <div class="carousel">
           <img src="https://via.placeholder.com/200x120?text=Tiggo1">
           <img src="https://via.placeholder.com/200x120?text=Tiggo2">
@@ -229,19 +235,16 @@
 </section>
 
 <section>
-  <h2>Отзывы</h2>
-  <div class="testimonial">“Очень доволен работой! Все функции активированы, все работает отлично.” — Иван</div>
-  <div class="testimonial">“Быстро, профессионально, недорого. Рекомендую!” — Мария</div>
-</section>
-
-<section>
   <h2>Связаться с нами</h2>
-  <form>
-    <input type="text" placeholder="Ваше имя" required>
-    <input type="tel" placeholder="Телефон" required>
-    <textarea placeholder="Ваше сообщение"></textarea>
+  <form action="https://formspree.io/f/your-form-id" method="POST">
+    <input type="text" name="name" placeholder="Ваше имя" required>
+    <input type="tel" name="phone" placeholder="Телефон" required>
+    <textarea name="message" placeholder="Ваше сообщение"></textarea>
     <button type="submit">Отправить</button>
   </form>
+  <p style="text-align:center; margin-top:10px; font-size:14px; color:gray;">
+    Или свяжитесь напрямую: <a href="https://t.me/yourtelegram" target="_blank">@yourtelegram</a>
+  </p>
 </section>
 
 <footer>&copy; 2025 AutoUpgrade</footer>
@@ -249,12 +252,19 @@
 <script>
   function toggleModels(id) {
     const el = document.getElementById(id);
-    el.style.display = el.style.display === 'block' ? 'none' : 'block';
+    el.classList.toggle('show');
   }
 
   function toggleTheme() {
     document.body.classList.toggle('dark');
+    localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
   }
+
+  window.addEventListener('DOMContentLoaded', () => {
+    if (localStorage.getItem('theme') === 'dark') {
+      document.body.classList.add('dark');
+    }
+  });
 </script>
 
 </body>
