--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <input id="price" placeholder="Цена" required />
       <input id="location" placeholder="Место" required />
       <textarea id="description" placeholder="Описание"></textarea>
+      <input type="hidden" id="edit-index" />
       <button type="submit">Сохранить</button>
     </form>
   </div>
