--- a/index.html
+++ b/index.html
@@ -602,6 +602,9 @@
     </style>
 </head>
 <body>
+    <div class="animated-bg"></div>
+    <div class="app-container">
+        <!-- остальной код -->
     <div class="app-container">
         <header class="income-header">
             <div>
